test/test_units/test_kclvm/test_types/invalid_test_data/assert/assert_1.k
a = 1
assert False, a
